# STOREMD

./: .gitignore  CLAUDE.md  README.md  SECURITY_AUDIT.md  context.md  railway.toml  railway.worker.toml  shopify.app.toml  vercel.json
backend/: .env.test  Dockerfile  Dockerfile.worker  docker-entrypoint.sh  pyproject.toml  requirements.txt  worker_health.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agent/: learner.py  memory.py  orchestrator.py  state.py
backend/app/api/routes/: admin.py  (+20 more)
backend/app/core/: exceptions.py  logging.py  security.py
backend/app/models/: scan.py  schemas.py
backend/app/services/: backup.py  claude.py  email_service.py  notification.py  report_generator.py  shopify.py  shopify_billing.py  stripe_billing.py  webhook_registration.py
backend/tasks/: browser_tasks.py  celery_app.py  cross_store_tasks.py  report_tasks.py  scan_tasks.py
backend/tests/: conftest.py
backend/tests/mocks/: claude_responses.py  shopify_responses.py
backend/tests/test_agent/: test_browser_base.py  test_learner.py  test_memory.py  test_one_click_fixer.py
backend/tests/test_analyzers/: test_accessibility.py  test_agentic_readiness.py  test_app_impact.py  test_broken_links.py  test_content_theft.py  test_email_health.py  test_ghost_billing.py  test_hs_code_validator.py  test_listing_analyzer.py  test_pixel_health.py  test_real_user_simulation.py  test_residue_detector.py  test_trend_analyzer.py  test_variant_organizer.py  test_visual_store_test.py
backend/tests/test_api/: test_auth.py  test_health.py  test_scans.py  test_webhooks.py
(+195 files in other folders)
