[project]
name = "storemd-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "unit: Unit tests (fast, no DB)",
    "integration: Integration tests (DB required)",
    "slow: Slow tests (browser, external APIs)",
]

[tool.pytest_env]
APP_ENV = "test"

[tool.ruff]
target-version = "py312"
line-length = 100
